SIMITAR/apps/.metadata/.plugins/org.eclipse.cdt.ui/libsimitar.build.log
19:02:06 **** Incremental Build of configuration Default for project libsimitar ****
make all 

* Compiling: ../libsimitar/IperfFlow.cpp -> ../libsimitar/obj/IperfFlow.og++ -fmessage-length=0 -std=c++11 -O0 -g3 -p -pg -ftest-coverage -fprofile-arcs -Wall -c -o ../libsimitar/obj/IperfFlow.o ../libsimitar/IperfFlow.cpp -I ../deps/ -I ../libsimitar/
../libsimitar/IperfFlow.cpp: In constructor ‘IperfFlow::IperfFlow()’:
../libsimitar/IperfFlow.cpp:11:3: error: class ‘IperfFlow’ does not have any field named ‘time_scale_factor’
   time_scale_factor(1.0)
   ^~~~~~~~~~~~~~~~~
../libsimitar/IperfFlow.cpp: In member function ‘std::__cxx11::string IperfFlow::iperf_command(const time_sec&, const uint&, const uint&, const string&)’:
../libsimitar/IperfFlow.cpp:147:6: warning: unused variable ‘pps’ [-Wunused-variable]
  int pps = this->getNumberOfPackets() / onTime;
      ^~~
../libsimitar/IperfFlow.cpp:149:6: warning: unused variable ‘nkbytes’ [-Wunused-variable]
  int nkbytes = this->getNumberOfKbytes();
      ^~~~~~~
../libsimitar/IperfFlow.cpp:150:6: warning: unused variable ‘nkbits’ [-Wunused-variable]
  int nkbits = this->getNumberOfKbytes() * 8;
      ^~~~~~
Makefile:108: recipe for target '../libsimitar/obj/IperfFlow.o' failed
make: *** [../libsimitar/obj/IperfFlow.o] Error 1

19:02:09 Build Finished (took 3s.167ms)

